--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "build:dev": "vite build --mode development",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "vercel-build": "npm run build"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
