Fix: Update image paths for Vercel deployment and update Node.js version

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "vercel-build": "npm run build"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": "18.x"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
