--- a/vercel.json
+++ b/vercel.json
@@ -13,16 +13,14 @@
   ],
   "routes": [
     {
-      "src": "/assets/(.*)",
+      "src": "/images/(.*)",
       "headers": {
         "cache-control": "public, max-age=31536000, immutable"
       }
     },
     {
       "src": "/(.*)",
-      "dest": "/index.html"
+      "dest": "/"
     }
-  ],
-  "buildCommand": "vite build",
-  "outputDirectory": "dist"
+  ]
 }
