--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,8 @@
       "config": {
         "distDir": "dist",
         "installCommand": "npm install",
-        "buildCommand": "npm run build"
+        "buildCommand": "npm run build",
+        "outputDirectory": "dist"
       }
     }
   ],
