--- a/vercel.json
+++ b/vercel.json
@@ -17,7 +17,8 @@
       "src": "/assets/(.*)",
       "headers": {
         "cache-control": "public, max-age=31536000, immutable"
-      }
+      },
+      "continue": true
     },
     {
       "src": "/_next/static/(.*)",
