--- a/vercel.json
+++ b/vercel.json
@@ -27,6 +27,10 @@
       }
     },
     {
+      "src": "/krpathavan/(.*)",
+      "dest": "/krpathavan/index.html"
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html"
     }
