--- a/vercel.json
+++ b/vercel.json
@@ -7,8 +7,7 @@
       "config": {
         "distDir": "dist",
         "installCommand": "npm install",
-        "buildCommand": "npm run build",
-        "outputDirectory": "dist"
+        "buildCommand": "npm run build"
       }
     }
   ],
@@ -17,18 +16,7 @@
       "src": "/assets/(.*)",
       "headers": {
         "cache-control": "public, max-age=31536000, immutable"
-      },
-      "continue": true
-    },
-    {
-      "src": "/_next/static/(.*)",
-      "headers": {
-        "cache-control": "public, max-age=31536000, immutable"
       }
-    },
-    {
-      "src": "/krpathavan/(.*)",
-      "dest": "/krpathavan/index.html"
     },
     {
       "src": "/(.*)",
