--- a/vercel.json
+++ b/vercel.json
@@ -13,10 +13,8 @@
   ],
   "routes": [
     {
-      "src": "/assets/(.*)",
-      "headers": {
-        "cache-control": "public, max-age=31536000, immutable"
-      }
+      "src": "/krpathavan/(.*)",
+      "dest": "/krpathavan/index.html"
     },
     {
       "src": "/(.*)",
